--- a/style/header.styl
+++ b/style/header.styl
@@ -122,6 +122,10 @@
             white-space nowrap
             overflow hidden
 
+            &.column-drag-hover
+                background-color yellowgreen
+
+
         &.z-sortable
             .z-inner
                 cursor pointer
