--- a/style/contents.styl
+++ b/style/contents.styl
@@ -1,7 +1,4 @@
 .react-datagrid
-    &.z-style-alternate
-        .z-odd.z-row
-            background $datagrid-row-odd-background
 
     .z-column-content
         overflow visible
@@ -13,6 +10,9 @@
             overflow hidden
 
     .z-row
+        border-bottom 1px solid #f2f2f2
+        height auto !important
+
         &.z-over
         &.z-over.z-odd
             background $datagrid-row-over-background
@@ -21,6 +21,7 @@
             background $datagrid-row-selected-background
         .z-cell
             datagrid-cell()
+            padding 18px
 
     .z-group-row
         &.z-over
