--- a/style/index.styl
+++ b/style/index.styl
@@ -21,7 +21,7 @@ datagrid-cell()
         white-space nowrap
         overflow hidden
         text-overflow ellipsis
-        padding 0px $datagrid-cell-padding
+        padding 18px
 
 @import './resize.styl'
 
