--- a/style/index.styl
+++ b/style/index.styl
@@ -41,7 +41,7 @@ datagrid-cell()
 
     & > .z-inner
         flex 1
-        overflow hidden
+        //overflow hidden TODO for menu temp
         position relative
         display flex
         flex-flow column
