Fixed dnd colors.

--- a/style/header.styl
+++ b/style/header.styl
@@ -137,7 +137,8 @@
             color #fff
 
             &.column-drag-hover
-                background: #cfcfcf
+                background #c6cf5f
+                color #000
 
 
         &.z-sortable
