Change place of close/open indicator.

--- a/style/contents.styl
+++ b/style/contents.styl
@@ -28,8 +28,8 @@
             content '+'
             font-size 20px
             position absolute
-            right 20px
-            top calc(50% - 10px)
+            left 13px
+            top calc(50% - 13px)
 
         &.open
             &:before
@@ -42,3 +42,6 @@
 
     .z-group-cell
         flex 1
+
+        .z-content
+            padding-left 35px !important
